// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DojFileSelectFormCard component should match exact snapshot when file has been selected 1`] = `
<div>
  <div
    className="form-card formCard"
  >
    <header
      className="form-card__header"
    >
      <h1
        className="form-card__title"
      >
        Import Prop 64 bulk conviction data files
      </h1>
      <div
        className="text--help"
      >
        Import the original .dat files received from the DOJ.
      </div>
    </header>
    <div
      className="form-card__content "
    >
      <p
        className="semibold"
      >
        Choose .dat files to import
      </p>
      <div
        className="outlineBox"
      >
        <div>
          <div
            className="addPadding doj-file"
          >
            <p
              className="fileName"
            >
              File imported: 
              file
              <i
                className="fileRemove icon-close"
                onClick={[Function]}
                role="button"
              />
            </p>
          </div>
          <div>
            <label
              className="noBottomMargin button file-upload__label"
              htmlFor="doj-file-input"
            >
              <input
                accept=".dat, .csv"
                className="file-upload__input"
                id="doj-file-input"
                multiple={true}
                name="doj-file-input"
                onChange={[Function]}
                type="file"
              />
              Select file
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      className=" form-card__footer"
    >
      <div
        className="buttons"
      >
        <button
          className="button button--primary"
          disabled={false}
          id="continue"
          type="button"
        >
          Continue 
          <i
            className="icon-arrow_forward"
          />
        </button>
        <button
          className="button"
          id="goback"
          type="button"
        >
          Go back 
          <i
            className="icon-replay"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DojFileSelectFormCard component should match exact snapshot when file has not been selected 1`] = `
<div>
  <div
    className="form-card formCard"
  >
    <header
      className="form-card__header"
    >
      <h1
        className="form-card__title"
      >
        Import Prop 64 bulk conviction data files
      </h1>
      <div
        className="text--help"
      >
        Import the original .dat files received from the DOJ.
      </div>
    </header>
    <div
      className="form-card__content "
    >
      <p
        className="semibold"
      >
        Choose .dat files to import
      </p>
      <div
        className="outlineBox"
      >
        <div>
          <label
            className="noBottomMargin button file-upload__label"
            htmlFor="doj-file-input"
          >
            <input
              accept=".dat, .csv"
              className="file-upload__input"
              id="doj-file-input"
              multiple={true}
              name="doj-file-input"
              onChange={[Function]}
              type="file"
            />
            Select file
          </label>
          <p
            className="emptyMessage"
            id="no-error-message"
          >
            No file selected
          </p>
        </div>
      </div>
    </div>
    <div
      className=" form-card__footer"
    >
      <div
        className="buttons"
      >
        <button
          className="button button--primary button--disabled"
          disabled={true}
          id="continue"
          type="button"
        >
          Continue 
          <i
            className="icon-arrow_forward"
          />
        </button>
        <button
          className="button"
          id="goback"
          type="button"
        >
          Go back 
          <i
            className="icon-replay"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
